# Rancher-agenthub-

./: .env.example  .gitignore  .gitkeep  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/agenthub/: cli.py  main.py  worker.py
config/: agent-workbench.example.yaml  agent-workbench.schema.json
core/agenthub/: config_validation.py  main.py
core/agenthub/cli/: main.py
db/migrations/: 001_init.sql
docs/: api.md  architecture.md
examples/: workbench.yaml
misc/: install.sh
registry/agents/: main-agent.yaml
registry/skills/agent-routing/: SKILL.md
test/: test_config_validation.py  test_vertical_slice.py
