[project]
name = "agenthub-api"
version = "0.1.0"
description = "AgentHub FastAPI control plane"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "pyyaml>=6.0.0",
  "jsonschema>=4.22.0"
]

[tool.ruff]
line-length = 100
